# rustler_btleplug

./: .formatter.exs  .gitignore  README.md  checksum-Elixir.RustlerBtleplug.Native.exs  infos-rust-concurrency.txt  infos-rust-crosscompilation.txt  infos-rust.txt  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml  hex.yml  precomp.yml  release.yml  rust-ci.yml
config/: runtime.exs
docs/: git-roundtrip.sh  hex-release.sh  infos-rust-concurrency.txt  infos-rust-crosscompilation.txt  infos-rust.txt  infos-xos-bluetooth.txt
lib/: application.ex  btleclient.ex  btleclient.ex.txt  client.ex  native.ex  rusterl_btleplug_genserver.ex  rustler_types.ex
livebooks/: ble_demo.livemd  ble_demo.txt  genserver-dataframes.livemd
native/btleplug_client/: Cargo.toml  build.rs  build.rs.txt  roundtrip.sh  rust-toolchain.toml  rust-toolchain.toml.txt
native/btleplug_client copy/: Cargo.toml
native/btleplug_client copy/.cargo/: config.toml
native/btleplug_client copy/src/: atoms.rs  btle_manager.rs  btle_peripheral.rs  elixir_bridge.rs  lib.rs  lib.txt  lib_rs.txt  task.rs  task_executor.rs
native/btleplug_client/.cargo/: config.toml
native/btleplug_client/src/: atoms.rs  central_manager.rs  central_manager_finder.rs  central_manager_state.rs  central_manager_state_utils.rs  central_manager_utils.rs  elixir_bridge.rs  gatt_peripheral.rs  gatt_sysinfo_characteristic.rs  lib.rs  logging.rs  peripheral.rs  utils.rs
test/: rustler_btleplug_client_test.exs  rustler_btleplug_native_ble_test.exs  rustler_btleplug_native_blestate_test.exs  rustler_btleplug_native_test.exs  rustler_btleplug_test.exs
