[package]
name = "btleplug_client"
version = "0.0.1"
keywords = ["bluetooth", "BLE", "bluez", "uwp", "corebluetooth"]
categories = ["hardware-support"]
edition = "2021"

[lib]
name = "btleplug_client"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
#serde = ["uuid/serde", "serde_cr", "serde_bytes"]

[dependencies]
btleplug = { version = "0.11.7", features = ["serde"] }
bluster = "0.2.0"
rustler = "0.36.1"
bufstream = "0.1.4"
log = "0.4.22"
env_logger = "0.11"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

uuid = { version = "1.6.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"

# uuid = "1.11.0"
serde = "1.0"
serde_json = "1.0.134"
futures = "0.3.31"
once_cell = "1.19"

[dev-dependencies]
rand = "0.9.0"
pretty_env_logger = "0.5.0"
